--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@visx/gradient": "^2.1.0",
     "@visx/grid": "^2.6.0",
     "@visx/pattern": "^2.1.2",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
